src/test/resources/validation/error/queryIncorrectPagination/schema.graphqls
type Query {
  actor(
    first: Int = 100,
    #after: String, #missing after
  ): ActorConnection @connection(for: "Actor")
}

type Actor @table {
  id: ID!
}
